--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,15 @@
     ],
     "require": {
         "wpackagist-plugin/akismet":"dev-trunk",
+        "wpackagist-plugin/add-to-any": "*",
+        "wpackagist-plugin/co-authors-plus": "*",
+        "wpackagist-plugin/disable-comments": "*",
+        "wpackagist-plugin/disable-emojis": "*",
+        "wpackagist-plugin/google-authenticator": "*",
+        "wpackagist-plugin/page-links-to": "*",
+        "wpackagist-plugin/tinymce-advanced": "*",
+        "wpackagist-plugin/wp-user-avatar": "*",
+        "wpackagist-plugin/wpfront-user-role-editor": "*",
+        "wpackagist-plugin/wordpress-seo": "*"
     }
 }
