--- a/.gitignore
+++ b/.gitignore
@@ -103,4 +103,6 @@ Thumbs.db
 # add your own entries here
 !wp-content/mu-plugins/example-mu-plugin/
 !wp-content/plugins/example-plugin/
-!wp-content/themes/example-theme/
+!wp-content/themes/defense360
+
+wp-content/themes/defense360/.DS_Store
