--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ wp-content/themes/*
 # ignore all files starting with . or ~
 .*
 ~*
+**/.DS_Store
 
 # ignore node dependency directories (used by grunt)
 node_modules/
@@ -105,5 +106,4 @@ Thumbs.db
 !wp-content/plugins/example-plugin/
 !wp-content/themes/defense360
 
-wp-content/themes/defense360/.DS_Store
 wp-content/themes/defense360/.sass-cache
