--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: ruby
 script:
 - cd wp-content/themes/defense360
-- compass compile --production
+- compass compile
 
 before_install:
 - gem install compass
