--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,10 @@ script:
 
 before_install:
 - gem install compass
+
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
+  on:
+    branch: theme-design
