--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: ruby
+cache: bundler
+rvm: 2.3.1
 script:
 - cd wp-content/themes/defense360
 - compass compile
@@ -11,4 +13,4 @@ deploy:
   skip_cleanup: true
   github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
   on:
-    branch: theme-design
+    branch: master
