Add Search-Filter plugin to archive pages
Allows users to filter posts by content type, category, and tags

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "wpackagist-plugin/wp-user-avatar": "*",
         "wpackagist-plugin/wpfront-user-role-editor": "*",
         "wpackagist-plugin/wordpress-seo": "*",
-        "wpackagist-plugin/jetpack": "*"
+        "wpackagist-plugin/jetpack": "*",
+        "wpackagist-plugin/search-filter": "*"
     }
 }
