--- a/.gitignore
+++ b/.gitignore
@@ -111,4 +111,4 @@ Thumbs.db
 
 wp-content/themes/defense360/.sass-cache
 **/.DS_Store
-wp-content/themes/defense360/style.css
+wp-content/themes/defense360/*.css
