--- a/.gitignore
+++ b/.gitignore
@@ -103,8 +103,7 @@ Thumbs.db
 
 # track these mu-plugins, plugins, and themes
 # add your own entries here
-!wp-content/mu-plugins/example-mu-plugin/
-!wp-content/plugins/example-plugin/
+!wp-content/plugins/defense360-google-analytics.php
 !wp-content/themes/defense360
 !.travis.yml
 !test
