--- a/.gitignore
+++ b/.gitignore
@@ -90,6 +90,7 @@ Thumbs.db
 !README.md
 !CHANGELOG.md
 !composer.json
+!d360_travis.enc
 
 # track favicon files, if they exist
 !android-chrome-*.png
