--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,18 @@
 language: ruby
 cache: bundler
 rvm: 2.3.1
+addons:
+  ssh_known_hosts: git.wpengine.com
 script:
 - cd wp-content/themes/defense360
 - compass compile
-
 before_install:
+- openssl aes-256-cbc -K $encrypted_06196c1cb5d9_key -iv $encrypted_06196c1cb5d9_iv
+  -in d360_travis.enc -out /tmp/d360_travis -d
 - gem install compass
-
-# deploy:
-#   provider: pages
-#   skip_cleanup: true
-#   github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
-#   on:
-#     branch: master
-
-
-addons:
-  ssh_known_hosts: git.wpengine.com
-
 deploy:
-  # deploy develop to the staging environment
-  - provider: script
-    skip_cleanup: true
-    script: scripts/deploy.sh
-    on:
-      branch: development
+- provider: script
+  skip_cleanup: true
+  script: scripts/deploy.sh
+  on:
+    branch: development
