--- a/.gitignore
+++ b/.gitignore
@@ -91,6 +91,7 @@ Thumbs.db
 !CHANGELOG.md
 !composer.json
 !d360_travis.enc
+!scripts/deploy.sh
 
 # track favicon files, if they exist
 !android-chrome-*.png
@@ -107,7 +108,6 @@ Thumbs.db
 !wp-content/plugins/defense360-google-analytics.php
 !wp-content/themes/defense360
 !.travis.yml
-!test
 
 wp-content/themes/defense360/.sass-cache
 **/.DS_Store
