--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ before_install:
 - openssl aes-256-cbc -K $encrypted_06196c1cb5d9_key -iv $encrypted_06196c1cb5d9_iv
   -in d360_travis.enc -out /tmp/d360_travis -d
 - gem install compass
+before_deploy:
+- cd $TRAVIS_BUILD_DIR
 deploy:
 - provider: script
   skip_cleanup: true
