--- a/wp-content/themes/defense360/package.json
+++ b/wp-content/themes/defense360/package.json
@@ -66,6 +66,7 @@
     "uglifyjs-webpack-plugin": "^2.1.1",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
+    "webpack-fix-style-only-entries": "^0.2.0",
     "webpack-manifest-plugin": "^2.0.4",
     "wp-pot-cli": "^1.2.2"
   },
