--- a/wp-content/themes/defense360/package.json
+++ b/wp-content/themes/defense360/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "underscores",
+  "name": "defense360",
   "version": "1.0.0",
-  "description": "A WordPress starter theme.",
+  "description": "A WordPress theme for the Defense360 CSIS microsite.",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
@@ -16,32 +16,32 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/carrieforde/_s-with-webpack.git"
+    "url": "git+https://github.com/CSIS-iLab/defense360_wp.git"
   },
   "keywords": [
     "wordpress",
     "webpack"
   ],
-  "author": "",
+  "author": "CSIS iDeas Lab",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/carrieforde/_s-with-webpack/issues"
+    "url": "https://github.com/CSIS-iLab/defense360_wp/issues"
   },
-  "homepage": "https://github.com/carrieforde/_s-with-webpack#readme",
+  "homepage": "https://github.com/CSIS-iLab/defense360_wp/issues#readme",
   "devDependencies": {
     "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.3.1",
-    "autoprefixer": "^9.4.7",
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "autoprefixer": "^9.4.10",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "browser-sync": "^2.26.3",
     "browser-sync-webpack-plugin": "^2.2.2",
     "clean-webpack-plugin": "^1.0.1",
-    "css-loader": "^2.1.0",
+    "css-loader": "^2.1.1",
     "css-mqpacker": "^7.0.0",
-    "eslint": "^5.13.0",
-    "eslint-config-prettier": "^4.0.0",
+    "eslint": "^5.15.1",
+    "eslint-config-prettier": "^4.1.0",
     "eslint-config-wordpress": "^2.0.0",
     "eslint-loader": "^2.1.2",
     "eslint-plugin-prettier": "^3.0.1",
@@ -57,18 +57,18 @@
     "stylelint": "^9.10.1",
     "stylelint-config-recommended-scss": "^3.2.0",
     "stylelint-config-wordpress": "^13.1.0",
-    "stylelint-order": "^2.0.0",
-    "stylelint-scss": "^3.5.3",
+    "stylelint-order": "^2.1.0",
+    "stylelint-scss": "^3.5.4",
     "stylelint-webpack-plugin": "^0.10.5",
     "svg-sprite-loader": "^4.1.3",
-    "svgo": "^1.1.1",
+    "svgo": "^1.2.0",
     "svgo-loader": "^2.2.0",
-    "uglifyjs-webpack-plugin": "^2.1.1",
-    "webpack": "^4.29.3",
+    "uglifyjs-webpack-plugin": "^2.1.2",
+    "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
     "webpack-fix-style-only-entries": "^0.2.0",
     "webpack-manifest-plugin": "^2.0.4",
-    "wp-pot-cli": "^1.2.2"
+    "wp-pot-cli": "^1.2.3"
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.5"
