--- a/wp-content/themes/defense360/package.json
+++ b/wp-content/themes/defense360/package.json
@@ -51,6 +51,8 @@
     "build": "NODE_ENV=production gulp build",
     "sass": "gulp sass",
     "watch": "gulp watch",
+    "stylelint": "gulp stylelint",
+    "stylelint-fix": "gulp stylelint --fix",
     "eslint": "gulp eslint",
     "eslint-fix": "gulp eslint --fix"
   },
