JS to add scrolled class to header when the page scrolls

--- a/wp-content/themes/defense360/package.json
+++ b/wp-content/themes/defense360/package.json
@@ -48,7 +48,7 @@
   },
   "scripts": {
     "start": "gulp",
-    "build": "NODE_ENV=production gulp build",
+    "build": "NODE_ENV=production npx gulp build",
     "sass": "gulp sass",
     "watch": "gulp watch",
     "stylelint": "gulp stylelint",
